# StockMarketAPI

./: .gitignore  README.md  docker-compose.yaml  services.env
.github/workflows/: deploy.yml  tests.yml
additional/: .dockerignore  Dockerfile
additional/database/: pyproject.toml
additional/database/database/: __init__.py  config.py
additional/database/database/models/: __init__.py  balance.py  balance_history.py  instrument.py  order.py  transaction.py  user.py
additional/database/migrations/models/: 0_20250414220024_init.py  1_20250414230925_update.py  2_20250414232332_update.py  3_20250414232420_update.py  4_20250414233003_update.py  5_20250414233704_update.py  6_20250416212013_update.py  7_20250416214918_None.py  9_20250515180711_None.py
additional/microkit/: pyproject.toml
additional/microkit/microkit/: __init__.py  client.py
additional/microkit/microkit/service/: __init__.py  decorators.py  logs.py  runner.py  service.py
services/api/: Dockerfile  requirements.txt  run.py
services/api/app/: config.py  logging.py  main.py
services/instruments/: requirements.txt  run.py
services/instruments/src/: instruments.py
services/instruments/tests/: conftest.py  functions_test.py  integration_test.py
services/orders/: requirements.txt  run.py
services/orders/src/: config.py  orders.py
services/orders/tests/: conftest.py  functions_test.py  trade_test.py
services/users/: requirements.txt  run.py
services/users/src/: config.py  models.py  users.py
services/users/tests/: conftest.py  integration_test.py  test_users_functions.py
(+44 files in other folders)
